--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "jspdf": "^2.5.1",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.51.2",
     "react-paginate": "^8.2.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.14.2",
+    "react-super-responsive-table": "^5.2.3",
+    "react-zxing": "^2.0.0",
     "reactstrap": "^9.2.2",
     "sweetalert2": "^11.7.20",
     "sweetalert2-react-content": "^5.0.7"
